[gd_scene load_steps=20 format=1]

[ext_resource path="res://Scripts/main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/highscore.tscn" type="PackedScene" id=2]
[ext_resource path="res://space_invaders/shader_mirage_code.tres" type="Shader" id=3]
[ext_resource path="res://space_invaders/Assets/BigFont.fnt" type="BitmapFont" id=4]
[ext_resource path="res://space_invaders/Assets/invasoresespaciais.tex" type="Texture" id=5]
[ext_resource path="res://Fonts/system.fnt" type="BitmapFont" id=6]
[ext_resource path="res://slide_grab_texture.png" type="Texture" id=7]
[ext_resource path="res://slide_texture.png" type="Texture" id=8]
[ext_resource path="res://space_invaders/Assets/samples/space_sounds/alien_shot.wav" type="Sample" id=9]
[ext_resource path="res://ObservingTheStar.ogg" type="AudioStream" id=10]

[sub_resource type="CanvasItemMaterial" id=1]

shader/shader = ExtResource( 3 )
shader/shading_mode = 0
shader_param/frequency = 60.0
shader_param/depth = 0.005

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 16, 16 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 16, 16 )
margin/left = 2.0
margin/right = 2.0
margin/top = 2.0
margin/bottom = 2.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="SampleLibrary" id=9]

samples/alien_shot = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[node name="main" type="Node"]

script/script = ExtResource( 1 )

[node name="game_node" type="Node" parent="."]

[node name="highscore" parent="." instance=ExtResource( 2 )]

editor/display_folded = true
margin/top = 84.0
margin/bottom = 252.0

[node name="best" type="Label" parent="highscore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 14.0
custom_colors/font_color = Color( 0.909943, 0.113281, 1, 1 )
text = "BEST_PLAYERS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ColorFrame" type="ColorFrame" parent="."]

material/material = SubResource( 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 84.0
margin/right = 176.0
margin/bottom = 228.0
color = Color( 1, 1, 1, 1 )

[node name="btn_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 44.0
margin/top = 241.0
margin/right = 136.0
margin/bottom = 263.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "PLAY"
flat = false

[node name="btn_options" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 279.0
margin/right = 163.0
margin/bottom = 301.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OPTIONS"
flat = false

[node name="title" type="Sprite" parent="."]

texture = ExtResource( 5 )
centered = false

[node name="options" type="Node2D" parent="."]

transform/pos = Vector2( -180, 0 )

[node name="label" type="Label" parent="options"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "OPTIONS"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sound_fx" type="Label" parent="options"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 45.0
margin/right = 180.0
margin/bottom = 59.0
custom_fonts/font = ExtResource( 6 )
text = "SOUND_FX"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sound_fx1" type="Label" parent="options"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 119.0
margin/right = 180.0
margin/bottom = 133.0
custom_fonts/font = ExtResource( 6 )
text = "MUSIC"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_ok" type="Button" parent="options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 57.0
margin/top = 279.0
margin/right = 123.0
margin/bottom = 301.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OK"
flat = false

[node name="volume_control" type="HScrollBar" parent="options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 43.0
margin/top = 62.0
margin/right = 142.0
margin/bottom = 78.0
custom_styles/grabber_hilite = SubResource( 7 )
custom_styles/grabber = SubResource( 7 )
custom_styles/scroll = SubResource( 8 )
range/min = 0.0
range/max = 1.0
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="volume_control1" type="HScrollBar" parent="options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 43.0
margin/top = 134.0
margin/right = 142.0
margin/bottom = 150.0
custom_styles/grabber_hilite = SubResource( 7 )
custom_styles/grabber = SubResource( 7 )
custom_styles/scroll = SubResource( 8 )
range/min = 0.0
range/max = 1.0
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="SamplePlayer" type="SamplePlayer" parent="options"]

config/polyphony = 1
config/samples = SubResource( 9 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Tween_camera" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="stream" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="config_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="pressed" from="btn_button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="btn_options" to="." method="_on_btn_options_pressed"]

[connection signal="pressed" from="options/btn_ok" to="." method="_on_btn_ok_pressed"]

[connection signal="value_changed" from="options/volume_control" to="." method="_on_volume_control_value_changed"]

[connection signal="value_changed" from="options/volume_control1" to="." method="_on_volume_control1_value_changed"]

[connection signal="timeout" from="config_timer" to="." method="_on_config_timer_timeout"]


